fix overflow x

--- a/src/layouts/less/mobile.less
+++ b/src/layouts/less/mobile.less
@@ -1,1 +1,5 @@
 @import '~@/assets/styles/global.less';
+
+.container {
+    overflow-x: hidden;
+}
